packages/kit/test/apps/basics/src/routes/errors/load-status-without-error-server/+page.js
import { error } from '@sveltejs/kit/data';

/** @type {import('@sveltejs/kit').Load} */
export async function load() {
	throw error(401, undefined);
}
